--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 .topnav{
-  background-color:#;
+  background-color:#333333;
   overflow: hidden;
+  text-align:center;
+}
+.topnav a{
+  color:#f2f2f2;
+  text-decoration: none;
+  padding: 14px 16px;
+  display:block;
+  float:left;
   text-align:center;
 }
