--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@
   float:left;
   text-align:center;
 }
+.banner{
+  background-color:#808080;
+  padding: 15px;
+  margin-top:7px;
+  text-align:center;
+}
