--- a/style.css
+++ b/style.css
@@ -13,13 +13,9 @@
 }
 .banner{
   background-color:#808080;
-  padding: 15px;
+  padding:200px;
   margin-top:7px;
-  text-align:center;
 }
-#img{
-  height: 700px;
-  margin-left:100px
-  
-
+#foto{
+ height:300px
 }
