--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 .topnav{
-  background-color:#333333;
+  background-color:#a59a89;
   overflow: hidden;
   text-align:center;
 }
 .topnav a{
   color:#f2f2f2;
   text-decoration: none;
-  padding: 14px 16px;
+  padding: 14px 20px;
   display:block;
   float:left;
   text-align:center;
 }
 .banner{
-  background-color:#808080;
+  background-color:#d2ccba;
   padding:200px;
   margin-top:7px;
+  display: flex;
+  align-items:center
 }
 #foto{
  height:300px
