--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .topnav{
-  background-color:#a59a89;
+  background-color:#18a4c6;
   overflow: hidden;
   text-align:center;
 }
 .topnav a{
-  color:#f2f2f2;
+  color:#2f2e30;
   text-decoration: none;
   padding: 14px 20px;
   display:block;
@@ -12,7 +12,7 @@
   text-align:center;
 }
 .banner{
-  background-color:#d2ccba;
+  background-color:#39bbd4;
   padding:200px;
   margin-top:7px;
   display: flex;
