💿💇 Checkpoint ./style.css:66357187/36 ./index.html:66357187/365

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 
 #proj{
-  background-color:#c8b3a6;
+  background-color:#5ad2e3;
   padding:200px
 }
 #sobremim{
@@ -32,9 +32,9 @@
 }
 #onda{
   position: absolute;
-  top:460px;
+  top:555px;
 }
 #onda2{
   position: absolute;
-  top:460px;
+  top:555px;
 }
